limit stellar magnitudes from config.ini works.

--- a/data/default_config.ini
+++ b/data/default_config.ini
@@ -262,6 +262,10 @@ flag_telescopes                     = false
 flag_telescope_name                 = false
 labels_amount                       = 3.0
 nebula_hints_amount                 = 3.0
+flag_clamp_stellar_mag              = false
+clamp_stellar_mag                   = 6.5
+flag_clamp_dso_mag                  = false
+clamp_dso_mag                       = 8.5
 
 [init_location]
 location                            = Paris, France
