added Tongan starlore

--- a/po/stellarium-skycultures/POTFILES.in
+++ b/po/stellarium-skycultures/POTFILES.in
@@ -23,6 +23,8 @@ skycultures/polynesian/constellation_names.eng.fab
 skycultures/polynesian/star_names.fab
 skycultures/sami/constellation_names.eng.fab
 skycultures/sami/star_names.fab
+skycultures/tongan/constellation_names.eng.fab
+skycultures/tongan/star_names.fab
 skycultures/tupi/constellation_names.eng.fab
 skycultures/tupi/star_names.fab
 skycultures/western/constellation_names.eng.fab
