--- a/skycultures/CMakeLists.txt
+++ b/skycultures/CMakeLists.txt
@@ -10,5 +10,6 @@ ADD_SUBDIRECTORY( navajo )
 ADD_SUBDIRECTORY( norse ) 
 ADD_SUBDIRECTORY( polynesian ) 
 ADD_SUBDIRECTORY( sami )
+ADD_SUBDIRECTORY( tongan ) 
 ADD_SUBDIRECTORY( tupi ) 
 ADD_SUBDIRECTORY( western ) 
