added comet Lemmon

--- a/data/ssystem.ini
+++ b/data/ssystem.ini
@@ -1638,3 +1638,22 @@ orbit_SemiMajorAxis = 0.910137
 albedo = 0.15
 radius = 1
 type = asteroid
+
+[c2012f6(lemmon)]
+parent = Sun
+orbit_Inclination = 82.6078
+coord_func = comet_orbit
+orbit_Eccentricity = 0.998533
+orbit_ArgOfPericenter = 304.9875
+absolute_magnitude = 10
+name = C/2012 F6 (Lemmon)
+slope_parameter = 4
+lighting = false
+tex_map = nomap.png
+color = 1.0, 1.0, 1.0
+orbit_AscendingNode = 332.7146
+albedo = 1
+radius = 5
+orbit_PericenterDistance = 0.731244
+type = comet
+orbit_TimeAtPericenter = 2456376.0137963
