--- a/skycultures/inuit/CMakeLists.txt
+++ b/skycultures/inuit/CMakeLists.txt
@@ -1,4 +1,20 @@
 
 ########### install files ###############
 
-INSTALL(FILES constellation_names.eng.fab constellationship.fab constellationsart.fab constellations_boundaries.dat star_names.fab info.ini description.ar.utf8 description.be.utf8 description.pt_BR.utf8 description.en.utf8 description.it.utf8 description.ru.utf8 description.uk.utf8 blubber-container.png breastbone.png caribou.png collarbones.png dogs.png lamp-stand.png runners.png the-one-behind.png two-in-front.png two-placed-far-apart.png two-sunbeams.png DESTINATION share/${PACKAGE}/skycultures/inuit)
+# install info.ini
+INSTALL(FILES info.ini DESTINATION share/${PACKAGE}/skycultures/inuit)
+
+# install star_names.fab
+INSTALL(FILES star_names.fab DESTINATION share/${PACKAGE}/skycultures/inuit)
+
+# install constellations data
+INSTALL(DIRECTORY ./ DESTINATION share/${PACKAGE}/skycultures/inuit
+	FILES_MATCHING PATTERN "constellation*" )
+
+# install artwork
+INSTALL(DIRECTORY ./ DESTINATION share/${PACKAGE}/skycultures/inuit
+	FILES_MATCHING PATTERN "*.png" )
+
+# install descriptions
+INSTALL(DIRECTORY ./ DESTINATION share/${PACKAGE}/skycultures/inuit
+	FILES_MATCHING PATTERN "description.*.utf8" )
