--- a/landscapes/moon/CMakeLists.txt
+++ b/landscapes/moon/CMakeLists.txt
@@ -1,5 +1,11 @@
 
 ########### install files ###############
 
-INSTALL(FILES landscape.ini description.ar.utf8 description.be.utf8 description.bg.utf8 description.de.utf8 description.fr.utf8 description.nb.utf8 description.pt_BR.utf8 description.en.utf8 description.ru.utf8 apollo17.png DESTINATION share/${PACKAGE}/landscapes/moon)
+# install landscape.ini
+INSTALL (FILES landscape.ini DESTINATION share/${PACKAGE}/landscapes/moon )
 
+# install texture
+INSTALL (FILES apollo17.png DESTINATION share/${PACKAGE}/landscapes/moon )
+
+# install descriptions
+INSTALL (DIRECTORY ./ DESTINATION share/${PACKAGE}/landscapes/moon FILES_MATCHING PATTERN "description.*.utf8" )
