--- a/skycultures/aztec/CMakeLists.txt
+++ b/skycultures/aztec/CMakeLists.txt
@@ -1,4 +1,20 @@
 
 ########### install files ###############
 
-INSTALL(FILES info.ini constellation_names.eng.fab constellation_names.esp.fab constellationsart.fab constellationship.fab constellations_boundaries.dat star_names.fab description.ar.utf8 description.be.utf8 description.pt_BR.utf8 description.en.utf8 description.es.utf8 description.ru.utf8 description.uk.utf8 aztec0.png citlaltlachtli.png citlaltlachtli_t.png colotlixayac_image.png colotlixayac.png colotlixayac_t.png edificios.png mamalhuaztli_image.png mamalhuaztli.png mamalhuaztli_t.png nanahuatzin.png Primeros_Memoriales.png tianquiztli.png Tianquiztli_T.png tiaquitztli_image.png xonecuilli_Glifo.png xonecuilli.png xonecuilli_t.png DESTINATION share/${PACKAGE}/skycultures/aztec)
+# install info.ini
+INSTALL(FILES info.ini DESTINATION share/${PACKAGE}/skycultures/aztec)
+
+# install star_names.fab
+INSTALL(FILES star_names.fab DESTINATION share/${PACKAGE}/skycultures/aztec)
+
+# install constellations data
+INSTALL(DIRECTORY ./ DESTINATION share/${PACKAGE}/skycultures/aztec
+	FILES_MATCHING PATTERN "constellation*" )
+
+# install artwork
+INSTALL(DIRECTORY ./ DESTINATION share/${PACKAGE}/skycultures/aztec
+	FILES_MATCHING PATTERN "*.png" )
+
+# install descriptions
+INSTALL(DIRECTORY ./ DESTINATION share/${PACKAGE}/skycultures/aztec
+	FILES_MATCHING PATTERN "description.*.utf8" )
