--- a/skycultures/korean/CMakeLists.txt
+++ b/skycultures/korean/CMakeLists.txt
@@ -1,5 +1,20 @@
 
 ########### install files ###############
 
-INSTALL(FILES constellationship.fab constellation_names.eng.fab constellations_boundaries.dat info.ini constellation_names.exp.fab constellationsart.fab on_korea_constellations.txt star_names.fab description.ar.utf8 description.be.utf8 description.en.utf8 description.pt_BR.utf8 description.it.utf8 description.ru.utf8 description.uk.utf8 DESTINATION share/${PACKAGE}/skycultures/korean )
+# install info.ini
+INSTALL(FILES info.ini DESTINATION share/${PACKAGE}/skycultures/korean)
 
+# install star_names.fab
+INSTALL(FILES star_names.fab DESTINATION share/${PACKAGE}/skycultures/korean)
+
+# install constellations data
+INSTALL(DIRECTORY ./ DESTINATION share/${PACKAGE}/skycultures/korean
+	FILES_MATCHING PATTERN "constellation*" )
+
+# install artwork
+#INSTALL(DIRECTORY ./ DESTINATION share/${PACKAGE}/skycultures/korean
+#	FILES_MATCHING PATTERN "*.png" )
+
+# install descriptions
+INSTALL(DIRECTORY ./ DESTINATION share/${PACKAGE}/skycultures/korean
+	FILES_MATCHING PATTERN "description.*.utf8" )
