--- a/skycultures/polynesian/CMakeLists.txt
+++ b/skycultures/polynesian/CMakeLists.txt
@@ -1,2 +1,20 @@
+
 ########### install files ###############
-INSTALL(FILES  constellation_names.eng.fab constellationsart.fab constellationship.fab constellations_boundaries.dat info.ini star_names.fab description.ar.utf8 description.be.utf8 description.pt_BR.utf8 description.en.utf8 description.it.utf8 description.ru.utf8 description.uk.utf8 DESTINATION share/${PACKAGE}/skycultures/polynesian)
+
+# install info.ini
+INSTALL(FILES info.ini DESTINATION share/${PACKAGE}/skycultures/polynesian)
+
+# install star_names.fab
+INSTALL(FILES star_names.fab DESTINATION share/${PACKAGE}/skycultures/polynesian)
+
+# install constellations data
+INSTALL(DIRECTORY ./ DESTINATION share/${PACKAGE}/skycultures/polynesian
+	FILES_MATCHING PATTERN "constellation*" )
+
+# install artwork
+#INSTALL(DIRECTORY ./ DESTINATION share/${PACKAGE}/skycultures/polynesian
+#	FILES_MATCHING PATTERN "*.png" )
+
+# install descriptions
+INSTALL(DIRECTORY ./ DESTINATION share/${PACKAGE}/skycultures/polynesian
+	FILES_MATCHING PATTERN "description.*.utf8" )
