--- a/skycultures/sami/CMakeLists.txt
+++ b/skycultures/sami/CMakeLists.txt
@@ -1,5 +1,20 @@
 
 ########### install files ###############
 
-INSTALL(FILES constellation_names.eng.fab constellationship.fab constellations_boundaries.dat star_names.fab info.ini description.ar.utf8 description.be.utf8 description.nb.utf8 description.en.utf8 description.pt_BR.utf8 description.ru.utf8 description.uk.utf8 DESTINATION share/${PACKAGE}/skycultures/sami)
+# install info.ini
+INSTALL(FILES info.ini DESTINATION share/${PACKAGE}/skycultures/sami)
 
+# install star_names.fab
+INSTALL(FILES star_names.fab DESTINATION share/${PACKAGE}/skycultures/sami)
+
+# install constellations data
+INSTALL(DIRECTORY ./ DESTINATION share/${PACKAGE}/skycultures/sami
+	FILES_MATCHING PATTERN "constellation*" )
+
+# install artwork
+#INSTALL(DIRECTORY ./ DESTINATION share/${PACKAGE}/skycultures/sami
+#	FILES_MATCHING PATTERN "*.png" )
+
+# install descriptions
+INSTALL(DIRECTORY ./ DESTINATION share/${PACKAGE}/skycultures/sami
+	FILES_MATCHING PATTERN "description.*.utf8" )
