--- a/data/ssystem.ini
+++ b/data/ssystem.ini
@@ -1436,7 +1436,7 @@ orbit_ArgOfPericenter = 310.9214
 orbit_Epoch = 2456000.5
 absolute_magnitude = 1.6
 slope_parameter = 0.15
-lighting = false
+lighting = true
 tex_map = nomap.png
 color = 1.0, 1.0, 1.0
 orbit_AscendingNode = 144.3803
@@ -1458,7 +1458,7 @@ orbit_ArgOfPericenter = 161.6862
 orbit_Epoch = 2456000.5
 absolute_magnitude = 2.6
 slope_parameter = 0.15
-lighting = false
+lighting = true
 tex_map = nomap.png
 color = 1.0, 1.0, 1.0
 orbit_AscendingNode = 189.026
@@ -1480,7 +1480,7 @@ orbit_ArgOfPericenter = 73.6374
 orbit_Epoch = 2456000.5
 absolute_magnitude = 2.3
 slope_parameter = 0.15
-lighting = false
+lighting = true
 tex_map = nomap.png
 color = 1.0, 1.0, 1.0
 orbit_AscendingNode = 268.4595
@@ -1502,7 +1502,7 @@ orbit_ArgOfPericenter = 240.585
 orbit_Epoch = 2456000.5
 absolute_magnitude = 0.2
 slope_parameter = 0.15
-lighting = false
+lighting = true
 tex_map = nomap.png
 color = 1.0, 1.0, 1.0
 orbit_AscendingNode = 121.9004
@@ -1524,7 +1524,7 @@ orbit_ArgOfPericenter = 295.8208634497294
 orbit_Epoch =  2454135.5
 absolute_magnitude = -0.4
 slope_parameter = 0.15
-lighting = false
+lighting = true
 tex_map = nomap.png
 color = 1.0, 1.0, 1.0
 orbit_AscendingNode = 79.59590003989989
@@ -1546,7 +1546,7 @@ name = Varuna
 orbit_Epoch = 2456200.5
 absolute_magnitude = 3.6
 slope_parameter = 0.15
-lighting = false
+lighting = true
 tex_map = nomap.png
 color = 1.0, 1.0, 1.0
 orbit_AscendingNode = 97.2614
@@ -1568,7 +1568,7 @@ name = 2007 OR10
 orbit_Epoch = 2456200.5
 absolute_magnitude = 2
 slope_parameter = 0.15
-lighting = false
+lighting = true
 tex_map = nomap.png
 color = 1.0, 1.0, 1.0
 orbit_AscendingNode = 336.8394
@@ -1628,7 +1628,7 @@ absolute_magnitude = 24.4
 name = 2012 DA14
 orbit_Epoch = 2456400.5
 slope_parameter = 0.15
-lighting = false
+lighting = true
 tex_map = nomap.png
 color = 1.0, 1.0, 1.0
 orbit_AscendingNode = 146.9959
