initial model work; SatellitesDialog is partially broken

--- a/plugins/Satellites/src/CMakeLists.txt
+++ b/plugins/Satellites/src/CMakeLists.txt
@@ -28,6 +28,8 @@ SET(Satellites_SRCS
   Satellite.cpp
   Satellites.hpp
   Satellites.cpp
+  SatellitesListModel.hpp
+  SatellitesListModel.cpp
   gui/SatellitesDialog.hpp
   gui/SatellitesDialog.cpp
   gui/SatellitesImportDialog.hpp
