--- a/plugins/SolarSystemEditor/src/CMakeLists.txt
+++ b/plugins/SolarSystemEditor/src/CMakeLists.txt
@@ -40,7 +40,7 @@ IF(BUILD_DYNAMIC_PLUGINS)
  ENDIF(APPLE)
 
  IF(WIN32)
-  SET_TARGET_PROPERTIES(SolarSystemEditor PROPERTIES LINK_FLAGS "-enable-runtime-pseudo-reloc -Wl,--allow-multiple-definition" )
+  SET_TARGET_PROPERTIES(SolarSystemEditor PROPERTIES LINK_FLAGS "-Wl,--enable-runtime-pseudo-reloc -Wl,--allow-multiple-definition" )
   SET(StelMain stelMain)
  ELSE(WIN32)
   SET(StelMain )
