--- a/plugins/Observability/src/CMakeLists.txt
+++ b/plugins/Observability/src/CMakeLists.txt
@@ -36,7 +36,7 @@ IF(BUILD_DYNAMIC_PLUGINS)
                SET_TARGET_PROPERTIES(Observability PROPERTIES LINK_FLAGS "-undefined dynamic_lookup" SUFFIX ".dylib")
        ENDIF()
        IF(WIN32)
-               SET_TARGET_PROPERTIES(Observability PROPERTIES LINK_FLAGS "-enable-runtime-pseudo-reloc -Wl,--allow-multiple-definition" )
+               SET_TARGET_PROPERTIES(Observability PROPERTIES LINK_FLAGS "-Wl,--enable-runtime-pseudo-reloc -Wl,--allow-multiple-definition" )
                SET(StelMain stelMain)
        ELSE(WIN32)
                SET(StelMain )
