naming consistency for the magnitude limiting feature

--- a/data/default_config.ini
+++ b/data/default_config.ini
@@ -258,14 +258,12 @@ milky_way_intensity                 = 1
 flag_bright_nebulae                 = false
 flag_nebula_ngc                     = false
 meteor_rate                         = 10
-flag_telescopes                     = false
-flag_telescope_name                 = false
 labels_amount                       = 3.0
 nebula_hints_amount                 = 3.0
-flag_clamp_stellar_mag              = false
-clamp_stellar_mag                   = 6.5
-flag_clamp_dso_mag                  = false
-clamp_dso_mag                       = 8.5
+flag_star_magnitude_limit           = false
+star_magnitude_limit                = 6.5
+flag_nebula_magnitude_limit         = false
+nebula_magnitude_limit              = 8.5
 
 [init_location]
 location                            = Paris, France
