--- a/.bzrignore
+++ b/.bzrignore
@@ -10,3 +10,4 @@ stellarium.iss
 ./util/locations-editor/Makefile
 ./util/locations-editor/locations-editor
 ./util/locations-editor/locations-editor.pro.user
+./util/copy-translations.bat
